# Multithreading-Words-Count

./: CMakeLists.txt  README-old.md  README-patch-notes.md  README.md  config.txt
src/: main.cpp  script.py
